--- a/tf_dna_predictions/tasks/main.yml
+++ b/tf_dna_predictions/tasks/main.yml
@@ -3,19 +3,14 @@
 - name: Creates predictions data directory shared by portal and worker
   file: path=/pred_data state=directory
 
+# Create database
+
 - include: tasks/setup_postgres.yml db_state=reloaded db_config=normal
 
 - stat: path=/pred_data/loaded.txt
   register: pred_data_loaded
 
-- name: Setup loading postgres configuration
-  when: pred_data_loaded.stat.isreg is not defined
-  blockinfile:
-    dest: /var/lib/postgresql/data/postgresql.conf
-    marker: "# {mark} ANSIBLE MANAGED BLOCK"
-    content: |
-      maintenance_work_mem = 2048MB
-      fsync = off
+# Populate database
 
 - include: tasks/setup_postgres.yml db_state=restarted db_config=load
   when: pred_data_loaded.stat.isreg is not defined
@@ -37,19 +32,12 @@
   when: pred_data_loaded.stat.isreg is not defined
   command: touch /pred_data/loaded.txt
 
-- name: Setup production postgres configuration (1/4 RAM shared_buffers, memory for sorting)
-  blockinfile:
-    dest: /var/lib/postgresql/data/postgresql.conf
-    marker: "# {mark} ANSIBLE MANAGED BLOCK"
-    content: |
-      shared_buffers = 4GB
-      work_mem = 48MB
-      logging_collector = on
-      log_directory = 'pg_log'
-      log_min_duration_statement = 30
+# Setup production database settings
 
 - include: tasks/setup_postgres.yml db_state=restarted  db_config=production
   when: pred_data_loaded.stat.isreg is not defined
+
+# Start web portal, vacuum daemon, and worker
 
 - include: tasks/setup_portal.yml
 
