--- a/tf_dna_predictions/tasks/setup_vacuum.yml
+++ b/tf_dna_predictions/tasks/setup_vacuum.yml
@@ -1,3 +1,5 @@
+# Daemon that purges database records after certain time periods.
+
 - name: Create database vacuum container
   docker:
     image: dukegcb/tf-dna-predictions
