Adds step to pull dukegcb/predict-tf-binding image
Image is used by the prediction worker CWL and would be pulled by CWL but never updated

--- a/tf_dna_predictions/tasks/setup_worker.yml
+++ b/tf_dna_predictions/tasks/setup_worker.yml
@@ -54,3 +54,7 @@
       - /pred_data/models:/pred_data/models:ro
       - /pred_data/work:/pred_data/work:rw
     restart_policy: always
+
+- name: Pull latest predictions docker image
+  docker_image:
+    name: dukegcb/predict-tf-binding
