Set worker to pull always and state reloaded
Causes image to be updated on deployment and reloaded if needed

--- a/tf_dna_predictions/tasks/setup_worker.yml
+++ b/tf_dna_predictions/tasks/setup_worker.yml
@@ -53,6 +53,8 @@
       - /tmp:/tmp
       - /pred_data/models:/pred_data/models:ro
       - /pred_data/work:/pred_data/work:rw
+    pull: always
+    state: reloaded
     restart_policy: always
 
 # Using command-line docker pull here because ansible docker_image module is unpredictable.
