--- a/rnaseq/tasks/main.yml
+++ b/rnaseq/tasks/main.yml
@@ -23,8 +23,10 @@
     - samtools
 # for ansible >=2.4, use allow_downgrade and specify versions for R and samtools
 - name: Install cran packages for R
+  become: yes
   command: /usr/bin/Rscript -e "install.packages(pkgs='ggplot2', repos=c('http://archive.linux.duke.edu/cran/'))"
 - name: Install bioconductor packages for R
+  become: yes
   command: /usr/bin/Rscript -e "source('http://bioconductor.org/biocLite.R'); biocLite('DESeq2')"
 - name: Install STAR
   become: yes
