--- a/rnaseq/tasks/main.yml
+++ b/rnaseq/tasks/main.yml
@@ -89,15 +89,23 @@
     path: /etc/profile.d/fastqc.sh
     mode: 0644
     block: export PATH=/opt/FastQC:$PATH
+- name: Upgrade pip
+  become: yes
+  pip:
+    name: pip
+    extra_args: --upgrade
 - name: Install cutadapt
   become: yes
   pip:
     name: cutadapt
     version: 1.14
-- name: Install MultiQC
+- name: Install development version of MultiQC
+  become: yes
+  shell: 'pip install --upgrade --force-reinstall git+https://github.com/ewels/MultiQC.git'
+- name: Install HTSeq
   become: yes
   pip:
-    name: multiqc
+    name: HTSeq
 - name: Create TrimGalore directory
   become: yes
   file: path=/opt/TrimGalore state=directory mode=0755
