rnaseq: install DESeq2 dependencies
libxml2-devel to fix 'Cannot find xml2-config'
curl-config to fix 'Cannot find curl-config'

--- a/rnaseq/tasks/main.yml
+++ b/rnaseq/tasks/main.yml
@@ -23,6 +23,8 @@
     - python-pip
     - python-devel
     - nfs-utils
+    - libxml2-devel
+    - curl-devel
     - R
     - samtools
 # for ansible >=2.4, use allow_downgrade and specify versions for R and samtools
