--- a/rnaseq/tasks/main.yml
+++ b/rnaseq/tasks/main.yml
@@ -48,7 +48,8 @@
     line: 'X11DisplayOffset 10'
 - name: Install cran packages for R
   become: yes
-  command: /usr/bin/Rscript -e "install.packages(pkgs='ggplot2', repos=c('http://archive.linux.duke.edu/cran/'))"
+  command: /usr/bin/Rscript -e "install.packages(pkgs=c('ggplot2', 'gplots'), repos=c('http://archive.linux.duke.edu/cran/'))"
+
 - name: Install bioconductor packages for R
   become: yes
   command: /usr/bin/Rscript -e "source('http://bioconductor.org/biocLite.R'); biocLite('DESeq2')"
