Installs firefox at current version
- This contradicts 691b0d4ce96488295fd0333acf42ff9cc49f3487, but the specific version was not available in repos, so will revisit.

--- a/rnaseq/tasks/main.yml
+++ b/rnaseq/tasks/main.yml
@@ -10,7 +10,7 @@
       - unzip
       - tcsh
       - evince
-      - firefox-38.7.0-1.el7_2
+      - firefox
       - xorg-x11-xauth
       - xorg-x11-apps
       - xorg-x11-xinit
