Prevent mounting NFS for now, but still create symlink

--- a/rnaseq/tasks/main.yml
+++ b/rnaseq/tasks/main.yml
@@ -126,15 +126,15 @@
 - name: Create NFS directory
   become: yes
   file: path=/nfs/data state=directory mode=0755
-- name: mount /nfs/data
-  become: yes
-  mount: fstype=nfs opts='vers=3' path=/nfs/data src={{ readonly }} state=mounted
+#- name: mount /nfs/data
+#  become: yes
+#  mount: fstype=nfs opts='vers=3' path=/nfs/data src={{ readonly }} state=mounted
 - name: Create GSEA directory
   become: yes
   file: path=/opt/GSEA state=directory mode=0755
 - name: Symlink GSEA jar file to /opt/GSEA/gsea-3.0.jar
   become: yes
-  file: src=/nfs/data/bin/GSEA3/gsea-3.0.jar dest=/opt/GSEA/gsea-3.0.jar state=link
+  file: src=/nfs/data/bin/GSEA3/gsea-3.0.jar dest=/opt/GSEA/gsea-3.0.jar state=link force=yes
 - name: Create QoRTs directory
   become: yes
   file: path=/opt/QoRTs state=directory mode=0755
