--- a/rnaseq/tasks/main.yml
+++ b/rnaseq/tasks/main.yml
@@ -47,12 +47,12 @@
     dest: /etc/ssh/sshd_config
     regexp: '^#X11DisplayOffset'
     line: 'X11DisplayOffset 10'
-- name: Install cran packages for R
+- name: Install plotting packages packages for R
   become: yes
-  command: /usr/bin/Rscript -e "install.packages(pkgs=c('ggplot2', 'gplots'), repos=c('http://archive.linux.duke.edu/cran/'))"
+  command: /usr/bin/Rscript -e "install.packages(pkgs=c('ggplot2', 'gplots'), repos = 'http://cran.us.r-project.org')"
 - name: Install bioconductor packages for R
   become: yes
-  command: /usr/bin/Rscript -e "source('http://bioconductor.org/biocLite.R'); biocLite('DESeq2')"
+  command: /usr/bin/Rscript -e "install.packages('BiocManager', repos = 'http://cran.us.r-project.org'); BiocManager::install('DESeq2');"
 - name: Install QoRTs R package
   become: yes
   command: /usr/bin/Rscript -e "install.packages('http://hartleys.github.io/QoRTs/QoRTs_STABLE.tar.gz',repos=NULL,type='source');"
