Include role to launch an NFS server
- Tasks to launch and configure NFS server, mounting to workshop VMs
- Removes additional network creation, just using default network

--- a/rnaseq-configure-gcloud-vms/tasks/main.yml
+++ b/rnaseq-configure-gcloud-vms/tasks/main.yml
@@ -14,6 +14,14 @@
     name: "{{ workshop_user }}"
     password: "{{ [workshop_user, 'password'] | join('-') | password_hash('sha512') }}"
 
+- name: Mount NFS
+  mount:
+    fstype: nfs
+    opts: "vers=3,ro"
+    path: "/nfs/data"
+    src: "{{ hostvars[groups['rnaseq-workshop-gcloud-nfs-server'][0]].nfs_server_ip }}:/srv/workshop-data"
+    state: mounted
+
 - name: Create local file of workshop VM
   become: false
   local_action:
