--- a/rnaseq-launch-gcloud-vms/tasks/main.yml
+++ b/rnaseq-launch-gcloud-vms/tasks/main.yml
@@ -1,28 +1,14 @@
-- name: Create network
-  gcp_compute_network:
-    name: rnaseq-network
+- name: Create NFS Server Network Address
+  gcp_compute_address:
+    name: "address-nfs"
+    region: us-central1
     project: "{{ gcp_project_id }}"
     auth_kind: serviceaccount
     service_account_file: "{{ gcp_service_account_file }}"
     state: "{{ gcp_state }}"
-  register: network
+  register: nfs_server_address
 
-- name: Allow SSH access
-  gcp_compute_firewall:
-    name: rnaseq-firewall
-    allowed:
-    - ip_protocol: tcp
-      ports:
-      - '22'
-    project: "{{ gcp_project_id }}"
-    network: "{{ network }}"
-    auth_kind: serviceaccount
-    service_account_file: "{{ gcp_service_account_file }}"
-    state: "{{ gcp_state }}"
-  register: firewall
-
-# TODO: Do this for a fleet
-- name: Create Network Addresses
+- name: Create Instance Network Addresses
   gcp_compute_address:
     name: "address-{{ item }}"
     region: us-central1
@@ -33,6 +19,36 @@
   register: addresses
   loop: "{{ gcp_rnaseq_vms }}"
 
+- name: launch an NFS server
+  gcp_compute_instance:
+    name: "rnaseq-nfs"
+    machine_type: "{{ gcp_nfs_machine_type }}"
+    metadata:
+      ssh-keys: "{{ gcp_ssh_user }}:{{ gcp_ssh_key }}"
+    disks:
+    - auto_delete: no
+      boot: yes
+      initialize_params:
+        disk_size_gb: 50
+        source_image: "{{ gcp_image_name }}"
+    network_interfaces:
+    - access_configs:
+      - name: External NAT
+        nat_ip: "{{ nfs_server_address }}"
+        type: ONE_TO_ONE_NAT
+    zone: "{{ gcp_zone }}"
+    project: "{{ gcp_project_id }}"
+    auth_kind: serviceaccount
+    service_account_file: "{{ gcp_service_account_file }}"
+    state: "{{ gcp_state }}"
+  register: nfs_server
+
+- name: Add nfs server to inventory
+  add_host:
+    name: "{{ nfs_server_address.address }}"
+    groupname: rnaseq-workshop-gcloud-nfs-server
+    nfs_server_ip: "{{ nfs_server.networkInterfaces[0].networkIP }}"
+  when: gcp_state == "present"
 
 - name: Create Instances
   gcp_compute_instance:
@@ -47,8 +63,7 @@
         disk_size_gb: 25
         source_image: "{{ gcp_image_name }}"
     network_interfaces:
-    - network: "{{ network }}"
-      access_configs:
+    - access_configs:
       - name: External NAT
         nat_ip: "{{ addresses.results[loop_idx] }}"
         type: ONE_TO_ONE_NAT
@@ -62,7 +77,11 @@
   loop_control:
     index_var: loop_idx
 
-- name: Wait for SSH to come up
+- name: Wait for NFS SSH to come up
+  wait_for: host={{ nfs_server_address.address }} port=22 delay=10 timeout=60
+  when: gcp_state == "present"
+
+- name: Wait for instances SSH to come up
   wait_for: host={{ addresses.results[loop_idx].address }} port=22 delay=10 timeout=60
   loop: "{{ gcp_rnaseq_vms }}"
   loop_control:
@@ -78,7 +97,3 @@
   loop_control:
     index_var: loop_idx
   when: gcp_state == "present"
-
-# TODO mount storage
-
-# TODO: Instance templates?
