--- a/rnaseq-configure-gcloud-vms/tasks/main.yml
+++ b/rnaseq-configure-gcloud-vms/tasks/main.yml
@@ -12,7 +12,7 @@
 - name: Add a workshop user
   user:
     name: "{{ workshop_user }}"
-    password: "{{ [workshop_user, 'password'] | join('-') | password_hash('sha512') }}"
+    password: "{{ [workshop_user, 'pw'] | join('') | password_hash('sha512') }}"
 
 - name: Mount NFS
   mount:
@@ -34,6 +34,6 @@
   become: false
   local_action:
     module: lineinfile
-    line: "{{ workshop_user }}\t{{inventory_hostname}}\t{{workshop_user}}-password"
+    line: "{{ workshop_user }}\t{{inventory_hostname}}\t{{workshop_user}}pw"
     regexp: "^{{ workshop_user }}"
     dest: workshop_vms.txt
