--- a/rnaseq-launch-gcloud-vms/tasks/main.yml
+++ b/rnaseq-launch-gcloud-vms/tasks/main.yml
@@ -1,21 +1,23 @@
 - name: Create NFS Server Network Address
   gcp_compute_address:
     name: "address-nfs"
-    region: us-central1
+    region: "{{ gcp_region }}"
     project: "{{ gcp_project_id }}"
     auth_kind: serviceaccount
     service_account_file: "{{ gcp_service_account_file }}"
   register: nfs_server_address
 
-- name: Create Instance Network Addresses
-  gcp_compute_address:
-    name: "address-{{ item }}"
-    region: us-central1
-    project: "{{ gcp_project_id }}"
-    auth_kind: serviceaccount
-    service_account_file: "{{ gcp_service_account_file }}"
-  register: addresses
-  loop: "{{ gcp_rnaseq_vms }}"
+- name: Create reusable NFS Server Disk
+  gcp_compute_disk:
+    name: "disk-nfs"
+    size_gb: 50
+    source_image: "{{ gcp_image_name }}"
+    zone: "{{ gcp_zone }}"
+    project: "{{ gcp_project }}"
+    auth_kind: "{{ gcp_cred_kind }}"
+    service_account_file: "{{ gcp_cred_file }}"
+    state: present
+  register: nfs_disk
 
 - name: launch an NFS server
   gcp_compute_instance:
@@ -26,9 +28,7 @@
     disks:
     - auto_delete: no
       boot: yes
-      initialize_params:
-        disk_size_gb: 50
-        source_image: "{{ gcp_image_name }}"
+      source: "{{ nfs_disk }}"
     network_interfaces:
     - access_configs:
       - name: External NAT
@@ -45,6 +45,16 @@
     name: "{{ nfs_server_address.address }}"
     groupname: rnaseq-workshop-gcloud-nfs-server
     nfs_server_ip: "{{ nfs_server.networkInterfaces[0].networkIP }}"
+
+- name: Create Instance Network Addresses
+  gcp_compute_address:
+    name: "address-{{ item }}"
+    region: "{{ gcp_region }}"
+    project: "{{ gcp_project_id }}"
+    auth_kind: serviceaccount
+    service_account_file: "{{ gcp_service_account_file }}"
+  register: addresses
+  loop: "{{ gcp_rnaseq_vms }}"
 
 - name: Create Instances
   gcp_compute_instance:
