--- a/rnaseq-launch-gcloud-vms/tasks/main.yml
+++ b/rnaseq-launch-gcloud-vms/tasks/main.yml
@@ -13,9 +13,9 @@
     size_gb: 50
     source_image: "{{ gcp_image_name }}"
     zone: "{{ gcp_zone }}"
-    project: "{{ gcp_project }}"
-    auth_kind: "{{ gcp_cred_kind }}"
-    service_account_file: "{{ gcp_cred_file }}"
+    project: "{{ gcp_project_id }}"
+    auth_kind: serviceaccount
+    service_account_file: "{{ gcp_service_account_file }}"
     state: present
   register: nfs_disk
 
